2008-04-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx, src/cursor.cxx:
  - Removed fetch_current_row() (it was odd, and hard to guarantee)
 test/unit/test_sql_cursor.cxx:
  - Test cursor existence using FETCH, not MOVE (to make failure more likely)
  - On older backends, test for cursor existence differently
  - Re-create series table when opening new transaction
  - WITH HOLD cursors require backend 7.4 or better
2008-04-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cursor.cxx:
  - Made init_empty_result() conditional on backend version
 test/test_helpers.hxx, test/unit/test_stateless_cursor.cxx,
 test/unit/test_sql_cursor.cxx:
  - Workaround for pre-8.0 backends, which lack generate_series()
 include/pqxx/transaction.hxx:
  - Cosmetic
2008-04-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Doxyfile.in:
  - Upgraded from Doxygen 1.4.6 to 1.5.5.
2008-04-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h, include/pqxx/cursor.h, src/oldcursor.cxx,
 test/src/cachedresult.cxx, test/test040.cxx, test/test041.cxx,
 test/test044.cxx, test/test047.cxx:
  - Deleted
  - Removed cachedresult and old Cursor classes
 include/Makefile.am, src/Makefile.am:
  - Retiring old *.h files and old cursor/cachedresult classes
 include/pqxx/cursor.hxx:
  - Made cursor_base::m_name const
 include/pqxx/nontransaction.h, include/pqxx/robusttransaction.h:
  - Deleted
  - Retired 1.x-style "*.h" headers
2008-04-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
  - Create some directories on demand
  - Run under bash, not /bin/sh (pushd/popd are bash-specific)
  - Default to default postgres FTP server, not mirror.in.th
  - Make SVNURL overridable
2008-04-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh, configure.ac.in, test/Makefile.am.template,
 test/test_helpers.hxx, test/unit/, test/unit/Makefile.am.template,
 test/unit/test_sql_cursor.cxx, test/unit/test_stateless_cursor.cxx,
 test/test_test_helpers.css: