@@ -1,3 +1,6 @@
+2008-04-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ src/robusttransaction.cxx:
+  - Log failures while creating log table
 2008-04-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/cursor.hxx, src/cursor.cxx:
   - Removed fetch_current_row() (it was odd, and hard to guarantee)
